--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right|end"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingBottom="16dp"
+            android:paddingRight="16dp"
+            app:srcCompat="@android:drawable/ic_dialog_map"/>
+
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
