--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right|end"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
             android:clickable="true"
             android:focusable="true"
-            android:paddingBottom="16dp"
-            android:paddingRight="16dp"
             app:srcCompat="@android:drawable/ic_dialog_map"/>
 
     </FrameLayout>
