--- a/app/src/main/res/layout/activity_venue_details.xml
+++ b/app/src/main/res/layout/activity_venue_details.xml
@@ -24,12 +24,20 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mapView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:theme="@style/AppTheme.PopupOverlay"
-                app:layout_collapseMode="pin"/>
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                      xmlns:map="http://schemas.android.com/apk/res-auto"
+                      xmlns:tools="http://schemas.android.com/tools"
+                      android:id="@+id/mapView"
+                      android:name="com.google.android.gms.maps.SupportMapFragment"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      tools:context=".ui.MapsActivity"
+                      map:cameraTilt="10"
+                      map:uiCompass="true"
+                      map:uiZoomControls="true"
+                      map:liteMode="true"
+                      map:mapType="normal"
+                />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
