--- a/app/src/main/res/layout/content_venue_details.xml
+++ b/app/src/main/res/layout/content_venue_details.xml
@@ -17,8 +17,9 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -26,13 +27,14 @@
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="368dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="368dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,13 +43,14 @@
         <TextView
             android:id="@+id/tv_contact"
             android:layout_width="0dp"
-            android:layout_height="18dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"/>
@@ -55,7 +58,7 @@
         <TextView
             android:id="@+id/tv_location"
             android:layout_width="0dp"
-            android:layout_height="17dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -69,13 +72,14 @@
         <TextView
             android:id="@+id/tv_verified"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_location"/>
@@ -83,13 +87,14 @@
         <TextView
             android:id="@+id/tv_url"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_verified"/>
@@ -97,7 +102,7 @@
         <TextView
             android:id="@+id/tv_hours"
             android:layout_width="0dp"
-            android:layout_height="29dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -111,13 +116,14 @@
         <TextView
             android:id="@+id/tv_popular"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_hours"/>
@@ -125,13 +131,14 @@
         <TextView
             android:id="@+id/tv_menu"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_popular"/>
@@ -139,13 +146,14 @@
         <TextView
             android:id="@+id/tv_short_url"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_menu"/>
@@ -154,7 +162,7 @@
         <TextView
             android:id="@+id/tv_canonical_url"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
@@ -162,6 +170,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:textColor="@android:color/holo_blue_light"
+            android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
