--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:hint="Enter your search here"
-            />
+            android:singleLine="true"/>
     </android.support.design.widget.TextInputLayout>
 
     <FrameLayout
