--- a/app/src/main/res/layout/list_row_item.xml
+++ b/app/src/main/res/layout/list_row_item.xml
@@ -7,7 +7,6 @@
                                              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        tools:style="@style/CardView"
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -15,9 +14,11 @@
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
         app:contentPadding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:style="@style/CardView">
 
 
         <LinearLayout
@@ -33,9 +34,9 @@
                 android:id="@+id/iv_photo"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|fill_vertical"
+                android:layout_gravity="left|center_vertical|start"
                 android:layout_weight="0.25"
-                android:scaleType="fitEnd"
+                android:scaleType="centerInside"
                 app:srcCompat="@android:color/background_light"/>
 
             <LinearLayout
